--- a/test/parser/testsuite/CMakeLists.txt
+++ b/test/parser/testsuite/CMakeLists.txt
@@ -277,23 +277,18 @@ foreach(GENURL ${ALLGEN})
 			COMMAND srcml --output-xml --xslt ${XSLT_DIR}/insertstruct.xsl     --url=${URL}.struct     ${GENURL} -o ${URL}.struct.${LANGEXT}.xml
 			COMMAND srcml --output-xml --xslt ${XSLT_DIR}/insertifthenelse.xsl --url=${URL}.ifthenelse ${GENURL} -o ${URL}.ifthenelse.${LANGEXT}.xml
 			COMMAND srcml --output-xml --xslt ${XSLT_DIR}/insertpreproc.xsl    --url=${URL}.preproc    ${GENURL} -o ${URL}.preproc.${LANGEXT}.xml
+			COMMAND srcml --unit=1 --url=${URL}.all --output-xml ${GENURL} -o ${URL}.preproc.${LANGEXT}.template
 			COMMAND srcml --output-xml-inner ${GENURL}
 			WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
 			OUTPUT_VARIABLE ALL_INNER
 		)
 
-		execute_process(
-			COMMAND srcml --unit=1 --url=${URL}.all --output-xml ${GENURL}
-			WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
-			OUTPUT_VARIABLE ALLHEADER
-		)
-
-		message(${GENURL})
+		file(READ ${CMAKE_CURRENT_BINARY_DIR}/${URL}.preproc.${LANGEXT}.template ALLHEADER)
 		string(LENGTH "${ALLHEADER}" SIZE)
-		message("SIZE ${SIZE}")
 		math(EXPR NEWSIZE "${SIZE} - 8")
 		string(SUBSTRING "${ALLHEADER}" 0 ${NEWSIZE} ALLCONTENT)
 		file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/${URL}.all.${LANGEXT}.xml "${ALLCONTENT}" "${ALL_INNER}" "</unit>")
+		file(REMOVE ${CMAKE_CURRENT_BINARY_DIR}/${URL}.preproc.${LANGEXT}.template)
 
 	endif()
 
