Cleanup parser testing targets

--- a/test/parser/CMakeLists.txt
+++ b/test/parser/CMakeLists.txt
@@ -1,7 +1,7 @@
 ##
 # @file CMakeLists.txt
 #
-# @copyright Copyright (C) 2013-2014 srcML, LLC. (www.srcML.org)
+# @copyright Copyright (C) 2013-2019 srcML, LLC. (www.srcML.org)
 # 
 # The srcML Toolkit is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -17,11 +17,23 @@
 # along with the srcML Toolkit; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
+set(TESTSUITE ${CMAKE_CURRENT_BINARY_DIR}/testsuite)
+
+# targets to manage parser testing
+add_custom_target(run    COMMENT "Runs all parser test cases"
+                         COMMAND time srcml --parser-test ${CMAKE_CURRENT_BINARY_DIR}/testsuite VERBATIM)
+add_custom_target(c      COMMENT "Runs all C parser test cases"
+                         COMMAND time srcml --parser-test --language="C"    ${TESTSUITE} VERBATIM)
+add_custom_target(cpp    COMMENT "Runs all C++ parser test cases"
+                         COMMAND time srcml --parser-test --language="C++"  ${TESTSUITE} VERBATIM)
+add_custom_target(C++    COMMENT "Runs all C++ parser test cases"
+                         COMMAND time srcml --parser-test --language="C++"  ${TESTSUITE} VERBATIM)
+add_custom_target(java   COMMENT "Runs all C++ parser test cases"
+                         COMMAND time srcml --parser-test --language="Java" ${TESTSUITE} VERBATIM)
+add_custom_target(cs     COMMENT "Runs all C language parser test cases"
+                         COMMAND time srcml --parser-test --language="C\#"  ${TESTSUITE} VERBATIM)
+add_custom_target(CSHARP COMMENT "Runs all C language parser test cases"
+                         COMMAND time srcml --parser-test --language="C\#"  ${TESTSUITE} VERBATIM)
+
 add_subdirectory(testsuite)
 
-# Collection of targets to manage parser testing
-add_custom_target(run COMMAND time srcml --parser-test testsuite)
-add_custom_target(c COMMAND time srcml --parser-test --language="C" testsuite)
-add_custom_target(cpp COMMAND time srcml --parser-test --language="C++" testsuite)
-add_custom_target(java COMMAND time srcml --parser-test --language="Java" testsuite)
-add_custom_target(cs COMMAND time srcml --parser-test --language="C\#" testsuite)
